packages/core/src/components/breadcrumb/_breadcrumb.scss
@import '../../global/mixins/exports';
@import '../../global/variables';
@import '../../global/typography';

@include exports('ray-breadcrumb') {
  .#{$ray-class-prefix}breadcrumbs {
    font-family: $ray-font-stack-mono;
    text-transform: uppercase;
    font-size: 0.75rem;
    line-height: 1;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow-x: auto;
    display: flex;
  }

  .#{$ray-class-prefix}breadcrumb {
    color: $ray-color-text-medium;

    &:not(:last-child) {
      margin-right: 0.5rem;

      &::after {
        margin-left: 0.5rem;
        content: '➝';
      }
    }

    a {
      color: inherit;

      &:hover,
      &:focus {
        text-decoration: underline;
      }
    }
  }
}

